test/expressions/noinit/isTupleIndividualAssign.good
isTupleIndividualAssign.chpl:1: error: noinit is only supported for arrays
