test/expressions/noinit/isTupleIndividualAssign.chpl
var tup: 2*int = noinit;
tup(0) = 7;
tup(1) = 4;
writeln(tup);